--- a/_includes/filtered-wai-curricula.liquid
+++ b/_includes/filtered-wai-curricula.liquid
@@ -1,19 +1,15 @@
-// lista de id
-// include.data
-
 
 {%- assign filteredItems = "" | split: "," -%}
 {%- for curricula in site.data.wai-curricula -%}
 
-    // dev modules
     {%- assign modulesAux = "" | split: "," -%}
     {%- assign modulesAux = modulesAux | push: curricula.name -%}
 
     {%- for module in curricula.modules -%}
         {%- assign moduleAux = "" | split: "," -%}
         {%- assign moduleAux = modulesAux | push: curricula.name -%}
-
         {% if include.data contains module.id %}
+            {{ curricula.name }}
             {{ module.name }}
         {% endif %}    
     
