--- a/_includes/filtered-wai-curricula.liquid
+++ b/_includes/filtered-wai-curricula.liquid
@@ -1,7 +1,7 @@
 {%- assign filteredItems = "" | split: "," -%}
 
 {%- for modules in site.data.wai-curricula -%}
-    {%- for subModule in modules.module -%}
+    {%- for subModule in modules.modules -%}
         {% if include.data contains subModule.id %}
             {% assign aux = "" | split: "," %}
             {% assign aux = aux | push: module.name %}
