--- a/_includes/filtered-wai-curricula.liquid
+++ b/_includes/filtered-wai-curricula.liquid
@@ -1,15 +1,18 @@
-{%- assign filteredItems = "" | split: "," -%}
 
-{%- for modules in site.data.wai-curricula -%}
-    {%- for subModule in modules.modules -%}
-        {% if include.data contains subModule.id %}
-            {% assign aux = "" | split: "," %}
-            {% assign aux = aux | push: module.name %}
-            {% assign aux = aux | push: subModule.name %}
-            {% assign aux = aux | push: subModule.link %}
-            {% assign filteredItems  = filteredItems | push: aux %}
-        {% endif %}
+{%- assign filteredItems = "" | split: "," -%}
+{%- for curricula in site.data.wai-curricula -%}
+    {%- for module in curricula.modules -%}
+        {% if include.data contains module.id %}
+            {%- assign filteredItems = filteredItems | push: curricula.name -%}
+            {%- assign filteredItems = filteredItems | push: module.name -%}
+        {% endif %}    
     {%- endfor -%}
 {%- endfor -%}
 
+
+
 {{ filteredItems | inspect }}
+
+
+
+
