--- a/_includes/filtered-wai-curricula.liquid
+++ b/_includes/filtered-wai-curricula.liquid
@@ -1,9 +1,6 @@
 {%- assign filteredItems = "" | split: "," -%}
 
 {%- for curricula in site.data.wai-curricula -%}
-    {%- assign auxCurricula = "" | split: "," -%}     
-    {%- assign auxCurricula = auxCurricula | push: curricula.name -%}
-
     {%- for modules in curricula.modules -%}
         {%- if include.data contains modules.id -%}
             {%- assign auxModules = "" | split: "," -%}
@@ -12,9 +9,8 @@
             {%- assign auxCurricula  = auxCurricula | push: auxModules -%}
         {%- endif -%}
     {%- endfor -%}
-
-    {%- assign filteredItems  = filteredItems | push: auxCurricula -%}
-
+    {% if auxCurricula %}
+        {%- assign filteredItems  = filteredItems | push: auxCurricula -%}
 {%- endfor -%}
 
 {{ filteredItems | inspect }}
