--- a/_includes/filtered-wai-curricula.liquid
+++ b/_includes/filtered-wai-curricula.liquid
@@ -11,6 +11,7 @@
     {%- endfor -%}
     {% if auxCurricula %}
         {%- assign filteredItems  = filteredItems | push: auxCurricula -%}
+    {% endif %}
 {%- endfor -%}
 
 {{ filteredItems | inspect }}
