--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -1,19 +1,12 @@
 {% for curricula in site.data.wai-curricula %}
 {% include excol.html type="start"%}
 <h4>{{ curricula.name }}</h4>
-<!-- {% capture info_label%}More information about the {{curricula.name}}{% endcapture %}
-{{ curricula.name }}{% include resource-link.html label=info_label href=curricula.link %} -->
-
 {% include excol.html type="middle" %}
-
 {% for modules in curricula.modules %}
 <div class="radio-field">
-    <input type="checkbox" id="course-{{ modules.id }}" name="course-{{ modules.id }}">
-    <label for="course-{{ modules.id }}">{{ modules.name }}</label>
+    <input type="checkbox" id="{{ modules.id }}" name="{{ modules.id }}">
+    <label for="{{ modules.id }}">{{ modules.name }}</label>
 </div>
-
 {% endfor %}
-
 {% include excol.html type="end" %}
-
 {% endfor %}
