--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -1,3 +1,8 @@
+.minimal-header-container{
+    display: grid !important;
+    grid-column-gap: 32px;
+}
+
 @media (min-width: 40em) {
     main {
         display: contents;
@@ -43,9 +48,6 @@ main>header {
     margin-bottom: 2em;
 }
 
-.button {
-    margin-top: 2em;
-}
 
 #app {
     display: contents;
@@ -243,6 +245,7 @@ fieldset>p {
   }
 }
 */
+
 
 #helpimprove {
     grid-column: 2 / 10;
