--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -8,13 +8,13 @@
 <p class="expl">{{ option.name }}, {{strings.asupport_including}}: </p>
 {% for details in option.options %}
 <div class="radio-field">  
-    <input type="checkbox" id="{{ details.id }}" name="{{ details.id }}" value="{{ details.id }}">
+    <input type="checkbox" id="{{ details.id }}" name="asupport[]" value="{{ details.id }}" group="asupport">
     <label for="{{ details.id }}">{{ details.name }}</label>
 </div>
 {% endfor %}
 {% else %}
 <div class="radio-field">
-    <input type="checkbox" id="{{ option.id }}" name="{{ option.id }}" value="{{ option.id }}">
+    <input type="checkbox" id="{{ option.id }}" name="asupport[]" value="{{ option.id }}" group="asupport">
     <label for="{{ option.id }}">{{ option.name }}</label>
 </div>    
 {% endif %}
@@ -23,5 +23,5 @@
 
 <div class="field">
     <label for="asupport_other">{{strings.asupport_other}}</label>
-    <textarea id="asupport_other"></textarea>
+    <textarea id="asupport_other" name="asupport_other"></textarea>
 </div>
