--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -3,7 +3,7 @@
 <p class="fieldset-subtitles">{{ curricula.name }}</p>
 {% for modules in curricula.modules %}
 <div class="radio-field">
-    <input type="checkbox" id="{{ modules.id }}" name="curricula[]" value="{{ modules.id }}"  group="curricula">
+    <input type="checkbox" id="{{ modules.id }}" name="wai_curricula[]" value="{{ modules.id }}"  group="wai_curricula">
     <label for="{{ modules.id }}">{{ modules.name }}</label>
 </div>
 {% endfor %}
