--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -8,13 +8,13 @@
 <p class="expl">{{ option.name }}, {{strings.asupport_including}}: </p>
 {% for details in option.options %}
 <div class="radio-field">  
-    <input type="checkbox" id="{{ details.id }}" name="asupport[]" value="{{ details.id }}" group="asupport">
+    <input type="checkbox" id="{{ details.id }}" name="accessibility_support[]" value="{{ details.id }}" group="accessibility_support">
     <label for="{{ details.id }}">{{ details.name }}</label>
 </div>
 {% endfor %}
 {% else %}
 <div class="radio-field">
-    <input type="checkbox" id="{{ option.id }}" name="asupport[]" value="{{ option.id }}" group="asupport">
+    <input type="checkbox" id="{{ option.id }}" name="accessibility_support[]" value="{{ option.id }}" group="accessibility_support">
     <label for="{{ option.id }}">{{ option.name }}</label>
 </div>    
 {% endif %}
@@ -22,6 +22,6 @@
 {% endfor %}
 
 <div class="field">
-    <label for="asupport_other">{{strings.asupport_other}}</label>
-    <textarea id="asupport_other" name="asupport_other"></textarea>
+    <label for="accessibility_support_other">{{strings.accessibility_support_other}}</label>
+    <textarea id="accessibility_support_other" name="accessibility_support_other"></textarea>
 </div>
