--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -83,7 +83,7 @@
 
 {{ strings.scheduling }}
 {% assign helper = site.data.helpers | where: "id", "scheduling" %}
-: {% for cb in course.scheduling %} {{strings[cb]}}{% if forloop.last != true %}; {% endif %} {% endfor %}
+: {% for cb in course.learning %} {{strings[cb]}}{% if forloop.last != true %}; {% endif %} {% endfor %}
 <button type="button" class="showhidebutton button-small helperbutton" aria-expanded="false" aria-controls="info_about_scheduling{{ course.id }}" data-target="#info_about_scheduling{{ course.id }}" data-showtext="{{ strings.show_info }}" data-hidetext="{{ strings.hide_info }}">{{ strings.show_info }}</button>
 <div class="helperinfo" id="info_about_scheduling{{ course.id }}" hidden="hidden">
     <p>{{ helper[0].description }}</p>
