--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -76,7 +76,7 @@
 {% assign helper = site.data.helpers | where: "id", "format" %}
 : {{ strings[course.format]}}
 <button type="button" class="showhidebutton button-small helperbutton" aria-expanded="false" aria-controls="info_about_format{{ course.id }}" data-target="#info_about_format{{ course.id }}" data-showtext="{{ strings.show_info }}" data-hidetext="{{ strings.hide_info }}">{{ strings.show_info }}</button>
-<div class="helperinfo" id="info_about_format{{ course.id }}" hidden="hidden" tabindex="-1">
+<div class="helperinfo" id="info_about_format{{ course.id }}" hidden="hidden">
     <p>{{ helper[0].description }}</p>
 </div>
 
@@ -85,7 +85,7 @@
 {% assign helper = site.data.helpers | where: "id", "scheduling" %}
 : {% for cb in course.learning %} {{strings[cb]}}{% if forloop.last != true %}; {% endif %} {% endfor %}
 <button type="button" class="showhidebutton button-small helperbutton" aria-expanded="false" aria-controls="info_about_scheduling{{ course.id }}" data-target="#info_about_scheduling{{ course.id }}" data-showtext="{{ strings.show_info }}" data-hidetext="{{ strings.hide_info }}">{{ strings.show_info }}</button>
-<div class="helperinfo" id="info_about_scheduling{{ course.id }}" hidden="hidden" tabindex="-1">
+<div class="helperinfo" id="info_about_scheduling{{ course.id }}" hidden="hidden">
     <p>{{ helper[0].description }}</p>
 </div>
 
