--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -358,7 +358,7 @@ fieldset label:hover a:hover {
     border: 2px solid var(--line-grey);
 }
 
-.button-clear-button:hover {
+.button-clear-button:hover, .button-clear-button:focus {
     background: var(--off-white);
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     color: black;
@@ -370,6 +370,16 @@ fieldset label:hover a:hover {
     margin-top: .2em;
     content: url(/content-images/wai-course-list/clear.svg) !important;
 }
+
+.button-clear-button::before {
+    margin: 0;
+    margin-right: .3em;
+    margin-top: .2em;
+    content: url(/content-images/wai-course-list/clear.svg) !important;
+}
+
+
+
 
 #filter-courses-info .div-clear-filters {
     grid-column: 3/3;
@@ -518,13 +528,3 @@ details .helperinfo {
 }
 
 
-.button-clear-button::before {
-    margin: 0;
-    margin-right: .3em;
-    margin-top: .2em;
-    content: url(/content-images/wai-course-list/clear.svg) !important;
-}
-
-.button-clear-button::before:hover {
-    fill: white !important;
-}
