--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -471,7 +471,7 @@ details .helperinfo {
 #preview-submission-overlay {
     position: fixed;
     /* Sit on top of the page content */
-    display: flex;
+    display: none;
     /* Hidden by default */
     /*align-items: center;*/
     justify-content: center;
